add pemissionx lib for request permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="edit_date">Edit Date</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="you_can_enter_barcode_manually">You can enter barcode manually</string>
 
 </resources>
